--- a/src/main/webapp/app/home/home-ministre/home-ministre.component.html
+++ b/src/main/webapp/app/home/home-ministre/home-ministre.component.html
@@ -12,9 +12,10 @@
                 <div class="u-container-layout u-container-layout-2">
                   <span class="u-file-icon u-icon u-icon-2"><img src=" ../../../content/images/page/1208280.png" alt="" /></span>
                   <h2 class="u-custom-font u-text u-text-2">le cabinet du ministère</h2>
+                  
                   <h5 class="u-text u-text-3">Pour consulter le cabinet du ministère clicker çi dessous</h5>
-                  <a
-                    href="https://nicepage.studio"
+                  <a routerLink=""
+                    
                     class="u-active-white u-border-none u-btn u-btn-round u-button-style u-hover-grey-30 u-palette-1-dark-2 u-radius-8 u-text-active-palette-5-dark-3 u-text-body-alt-color u-text-hover-palette-5-dark-3 u-btn-1"
                     >PLUS</a
                   >
