--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -39,7 +39,9 @@
   <div *ngSwitchCase="true">
     <jhi-home-ministre *jhiHasAnyAuthority="'ROLE_MINISTRE'"></jhi-home-ministre>
 
-    <jhi-home-ministre *jhiHasAnyAuthority="'ROLE_SG'"></jhi-home-ministre>
+    <jhi-cabinet *jhiHasAnyAuthority="'ROLE_MINISTRE'"></jhi-cabinet>
+
+    <jhi-detail-structure *jhiHasAnyAuthority="'ROLE_SG'"></jhi-detail-structure>
 
     <jhi-home-directeur *jhiHasAnyAuthority="'ROLE_DIRCTEUR'"></jhi-home-directeur>
   </div>
