--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -2499,3 +2499,283 @@ angular-cli removes postcss-rtl processed inline css, processed rules must be ad
     color: #ffffff;
   }
 }
+.cabinet{
+  .u-section-1 {
+    background-image: linear-gradient(0deg, rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url("../images/page/ghghgh-min-21.jpg");
+    background-position: 50% 50%;
+  }
+  
+  .u-section-1 .u-sheet-1 {
+    min-height: 692px;
+  }
+  
+  .u-section-1 .u-text-1 {
+    font-weight: 700;
+    font-size: 3.75rem;
+    margin: 35px auto 0 0;
+  }
+  
+  .u-section-1 .u-text-2 {
+    font-size: 1.25rem;
+    font-weight: 600;
+    font-style: normal;
+    margin: 16px 350px 0 16px;
+  }
+  
+  .u-section-1 .u-list-1 {
+    width: 699px;
+    margin: 35px auto 15px;
+  }
+  
+  .u-section-1 .u-repeater-1 {
+    grid-template-columns: calc(50% - 5px) calc(50% - 5px);
+    min-height: 493px;
+    grid-gap: 10px 10px;
+  }
+  
+  .u-section-1 .u-container-layout-1 {
+    padding: 25px 30px 22px;
+  }
+  
+  .u-section-1 .u-icon-1 {
+    height: 95px;
+    width: 95px;
+    background-image: none;
+    margin: 9px auto 0 0;
+    padding: 21px;
+  }
+  
+  .u-section-1 .u-text-3 {
+    letter-spacing: 1px;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    font-weight: 500;
+    margin: 32px 0 0;
+  }
+  
+  .u-section-1 .u-container-layout-2 {
+    padding: 25px 30px 22px;
+  }
+  
+  .u-section-1 .u-icon-2 {
+    height: 95px;
+    width: 95px;
+    background-image: none;
+    margin: 9px auto 0 0;
+    padding: 21px;
+  }
+  
+  .u-section-1 .u-text-4 {
+    letter-spacing: 1px;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    font-weight: 500;
+    margin: 32px 0 0;
+  }
+  
+  .u-section-1 .u-container-layout-3 {
+    padding: 25px 30px 22px;
+  }
+  
+  .u-section-1 .u-icon-3 {
+    height: 95px;
+    width: 95px;
+    background-image: none;
+    margin: 9px auto 0 0;
+    padding: 21px;
+  }
+  
+  .u-section-1 .u-text-5 {
+    letter-spacing: 1px;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    font-weight: 500;
+    margin: 32px 0 0;
+  }
+  
+  .u-section-1 .u-container-layout-4 {
+    padding: 25px 30px;
+  }
+  
+  .u-section-1 .u-icon-4 {
+    height: 95px;
+    width: 95px;
+    background-image: none;
+    margin: 9px auto 0 0;
+    padding: 21px;
+  }
+  
+  .u-section-1 .u-text-6 {
+    letter-spacing: 1px;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    font-weight: 500;
+    margin: 32px 0 0;
+  }
+  
+  @media (max-width: 1199px) {
+    .u-section-1 .u-sheet-1 {
+      min-height: 844px;
+    }
+  
+    .u-section-1 .u-text-1 {
+      width: auto;
+      margin-top: 60px;
+      margin-right: 202px;
+    }
+  
+    .u-section-1 .u-text-2 {
+      margin-right: 166px;
+      margin-left: 0;
+    }
+  
+    .u-section-1 .u-repeater-1 {
+      grid-template-columns: calc(33.3333% - 6.66667px) calc(33.3333% - 6.66667px) calc(33.3333% - 6.66667px);
+      min-height: 440px;
+    }
+  
+    .u-section-1 .u-icon-1 {
+      color: rgb(0, 0, 0) !important;
+    }
+  
+    .u-section-1 .u-text-3 {
+      width: auto;
+      margin-top: -63px;
+      margin-left: 106px;
+    }
+  
+    .u-section-1 .u-icon-2 {
+      color: rgb(0, 0, 0) !important;
+    }
+  
+    .u-section-1 .u-text-4 {
+      width: auto;
+      margin-top: -63px;
+      margin-left: 106px;
+    }
+  
+    .u-section-1 .u-icon-3 {
+      color: rgb(0, 0, 0) !important;
+    }
+  
+    .u-section-1 .u-text-5 {
+      width: auto;
+      margin-top: -63px;
+      margin-left: 106px;
+    }
+  
+    .u-section-1 .u-icon-4 {
+      color: rgb(0, 0, 0) !important;
+    }
+  
+    .u-section-1 .u-text-6 {
+      width: auto;
+      margin-top: -63px;
+      margin-left: 106px;
+    }
+  }
+  
+  @media (max-width: 991px) {
+    .u-section-1 .u-sheet-1 {
+      min-height: 646px;
+    }
+  
+    .u-section-1 .u-text-1 {
+      margin-right: 0;
+    }
+  
+    .u-section-1 .u-text-2 {
+      margin-right: 0;
+    }
+  
+    .u-section-1 .u-repeater-1 {
+      grid-template-columns: calc(50% - 5px) calc(50% - 5px);
+      min-height: 758px;
+    }
+  
+    .u-section-1 .u-text-3 {
+      margin-left: 122px;
+    }
+  
+    .u-section-1 .u-text-4 {
+      margin-left: 122px;
+    }
+  
+    .u-section-1 .u-text-5 {
+      margin-left: 122px;
+    }
+  
+    .u-section-1 .u-text-6 {
+      margin-left: 122px;
+    }
+  }
+  
+  @media (max-width: 767px) {
+    .u-section-1 .u-sheet-1 {
+      min-height: 485px;
+    }
+  
+    .u-section-1 .u-list-1 {
+      width: 540px;
+    }
+  
+    .u-section-1 .u-repeater-1 {
+      grid-template-columns: 100%;
+    }
+  
+    .u-section-1 .u-container-layout-1 {
+      padding-left: 10px;
+      padding-right: 10px;
+    }
+  
+    .u-section-1 .u-container-layout-2 {
+      padding-left: 10px;
+      padding-right: 10px;
+    }
+  
+    .u-section-1 .u-container-layout-3 {
+      padding-left: 10px;
+      padding-right: 10px;
+    }
+  
+    .u-section-1 .u-container-layout-4 {
+      padding-left: 10px;
+      padding-right: 10px;
+    }
+  }
+  
+  @media (max-width: 575px) {
+    .u-section-1 .u-sheet-1 {
+      min-height: 305px;
+    }
+  
+    .u-section-1 .u-text-1 {
+      font-size: 2.25rem;
+    }
+  
+    .u-section-1 .u-list-1 {
+      width: 340px;
+    }
+  
+    .u-section-1 .u-text-3 {
+      margin-top: 32px;
+      margin-left: 0;
+    }
+  
+    .u-section-1 .u-text-4 {
+      margin-top: 32px;
+      margin-left: 0;
+    }
+  
+    .u-section-1 .u-text-5 {
+      margin-top: 32px;
+      margin-left: 0;
+    }
+  
+    .u-section-1 .u-text-6 {
+      margin-top: 32px;
+      margin-left: 0;
+    }
+  }
+
+}
