--- a/src/main/webapp/app/entities/employe/detail/employe-detail.component.html
+++ b/src/main/webapp/app/entities/employe/detail/employe-detail.component.html
@@ -220,9 +220,19 @@
 
               <p class="p1">
                 <span class="span1"><img src=" ../../../content/images/page/call.png" /></span>
-                <dt><span jhiTranslate="gesEmployerApp.employe.telephone">Telephone</span></dt>
+                <dt><span jhiTranslate="gesEmployerApp.employe.telephone">telephone</span></dt>
                 <dd>
                   <span>{{ employe.telephone }}</span>
+
+                  <p class="p1">
+                    <span class="span1"><img src=" ../../../content/images/page/status.png" /></span
+                    ><span>
+                      <dt><span jhiTranslate="gesEmployerApp.employe.status">Status</span></dt>
+                      <dd>
+                        <span>{{ employe.status }}</span>
+                      </dd>
+                    </span>
+                  </p>
 
                   <p class="p1">
                     <span class="span1"><img src=" ../../../content/images/page/mail.png" /></span
@@ -235,52 +245,52 @@
                   </p>
                   <p class="p1">
                     <span class="span1"><img src=" ../../../content/images/page/pen.jpg" /></span
-                    ><span
-                      ><dt><span jhiTranslate="gesEmployerApp.employe.nni">Nni</span></dt>
+                    ><span>
+                      <dt><span jhiTranslate="gesEmployerApp.employe.nni">Nni</span></dt>
                       <dd>
                         <span>{{ employe.nni }}</span>
-                      </dd></span
-                    >
+                      </dd>
+                    </span>
                   </p>
 
                   <p class="p1">
                     <span class="span1"><img src=" ../../../content/images/page/gender.png" /></span
-                    ><span
-                      ><dt><span jhiTranslate="gesEmployerApp.employe.sexe">Sexe</span></dt>
+                    ><span>
+                      <dt><span jhiTranslate="gesEmployerApp.employe.sexe">Sexe</span></dt>
                       <dd>
                         <span jhiTranslate="{{ 'gesEmployerApp.Genre.' + employe.sexe }}">{{ employe.sexe }}</span>
-                      </dd></span
-                    >
+                      </dd>
+                    </span>
                   </p>
 
                   <p class="p1">
                     <span class="span1"><img src=" ../../../content/images/page/agenda.png" /></span
-                    ><span
-                      ><dt><span jhiTranslate="gesEmployerApp.employe.dateNaissance">Date Naissance</span></dt>
+                    ><span>
+                      <dt><span jhiTranslate="gesEmployerApp.employe.dateNaissance">Date Naissance</span></dt>
                       <dd>
                         <span>{{ employe.dateNaissance | formatMediumDatetime }}</span>
-                      </dd></span
-                    >
+                      </dd>
+                    </span>
                   </p>
 
                   <p class="p1">
                     <span class="span1"><img src=" ../../../content/images/page/agenda.png" /></span
-                    ><span
-                      ><dt><span jhiTranslate="gesEmployerApp.employe.dateRecrutement">Date Recrutement</span></dt>
+                    ><span>
+                      <dt><span jhiTranslate="gesEmployerApp.employe.dateRecrutement">Date Recrutement</span></dt>
                       <dd>
                         <span>{{ employe.dateRecrutement | formatMediumDatetime }}</span>
-                      </dd></span
-                    >
+                      </dd>
+                    </span>
                   </p>
 
                   <p class="p1">
                     <span class="span1"><img src=" ../../../content/images/page/book.png" /></span
-                    ><span
-                      ><dt><span jhiTranslate="gesEmployerApp.employe.matricule">Matricule</span></dt>
+                    ><span>
+                      <dt><span jhiTranslate="gesEmployerApp.employe.matricule">Matricule</span></dt>
                       <dd>
                         <span>{{ employe.matricule }}</span>
-                      </dd></span
-                    >
+                      </dd>
+                    </span>
                   </p>
                 </dd>
               </p>
@@ -290,13 +300,22 @@
           <div class="right-section">
             <div class="right-heading">
               <img src="../../../content/images/page/pencil.png" />
-              <p class="p2">Description</p>
+              <p class="p2">diplome</p>
             </div>
-            <p class="p3">
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
-              text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has
-              survived not only five centuries
-            </p>
+
+            <div class="clearfix"></div>
+
+            <div class="lr-box" *ngFor="let diplome of employe.diplomes; trackBy: trackId" data-cy="entityTable">
+              <div class="left">
+                <p class="p4">{{ diplome.date | formatMediumDate }}</p>
+              </div>
+
+              <div class="right">
+                <p class="p4">{{ diplome.libelle }}</p>
+                <p class="p5">{{ diplome.description }}.</p>
+              </div>
+              <div class="clearfix"></div>
+            </div>
 
             <div class="clearfix"></div>
             <br /><br />
@@ -305,47 +324,22 @@
               <p class="p2">Experience</p>
             </div>
             <div class="clearfix"></div>
-            <div class="lr-box">
+
+            <div class="lr-box" *ngFor="let experience of employe.experiences; trackBy: trackId" data-cy="entityTable">
               <div class="left">
-                <p class="p4">2012 - 2014</p>
-                <p class="p5">New Delhi</p>
+                <p class="p4">{{ experience.dateDebut | formatMediumDate }}</p>
+                <p class="p4">{{ experience.dateFin | formatMediumDate }}</p>
               </div>
 
               <div class="right">
-                <p class="p4">Web Designer</p>
-                <p class="p5">Retoching Company</p>
-                <p class="p5">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <p class="p4">{{ experience.entreprise }}</p>
+                <p class="p5">{{ experience.description }}.</p>
               </div>
               <div class="clearfix"></div>
             </div>
 
-            <div class="lr-box">
-              <div class="left">
-                <p class="p4">2014 - 2017</p>
-                <p class="p5">New Delhi</p>
-              </div>
-
-              <div class="right">
-                <p class="p4">Graphic Web Assitant</p>
-                <p class="p5">Setup Box Manufactring</p>
-                <p class="p5">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-              </div>
-              <div class="clearfix"></div>
-            </div>
-
-            <div class="lr-box">
-              <div class="left">
-                <p class="p4">2017 - 2021</p>
-                <p class="p5">Noida</p>
-              </div>
-
-              <div class="right">
-                <p class="p4">Web Designer</p>
-                <p class="p5">Retoching Company</p>
-                <p class="p5">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-              </div>
-              <div class="clearfix"></div>
-            </div>
+            <div class="clearfix"></div>
+            <br /><br />
 
             <br />
             <div class="right-heading">
@@ -353,33 +347,20 @@
               <p class="p2">Competence</p>
             </div>
             <div class="clearfix"></div>
-            <div class="lr-box">
+
+            <div class="lr-box" *ngFor="let competence of employe.competences; trackBy: trackId" data-cy="entityTable">
               <div class="left">
-                <p class="p4">2012 - 2014</p>
-                <p class="p5">New Delhi</p>
+                <p class="p4">{{ competence.nom }}</p>
               </div>
 
               <div class="right">
-                <p class="p4">BCA - IGNOU</p>
-                <p class="p5">Retoching Company</p>
-                <p class="p5">Lorem Ipsum is simply dummy text of</p>
+                <p class="p4">{{ competence.description }}</p>
               </div>
               <div class="clearfix"></div>
             </div>
 
-            <div class="lr-box">
-              <div class="left">
-                <p class="p4">2014 - 2016</p>
-                <p class="p5">New Delhi</p>
-              </div>
-
-              <div class="right">
-                <p class="p4">BCA - IGNOU</p>
-                <p class="p5">Retoching Company</p>
-                <p class="p5">Lorem Ipsum is simply dummy</p>
-              </div>
-              <div class="clearfix"></div>
-            </div>
+            <div class="clearfix"></div>
+            <br /><br />
 
             <br />
             <div class="right-heading">
